--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -11,6 +11,6 @@ jobs:
 
     steps:
     - name: Build the site in the azure login
-      uses: azure/login@v1
+      uses: Azure/login@v1.1
       with: 
         creds: '{"clientId":"${{ secrets.CLIENT_ID }}","clientSecret":"${{ secrets.CLIENT_SECRET }}","subscriptionId":"${{ secrets.SUBSCRIPTION_ID }}","tenantId":"${{ secrets.TENANT_ID }}"}'
