--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,4 +1,4 @@
-name: Azure Login
+name: jekyll
 
 on:
   push:
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Build the site in the azure login
-      uses: Azure/login@v1.1
-      with: 
-        creds: '{"clientId":"${{ secrets.CLIENT_ID }}","clientSecret":"${{ secrets.CLIENT_SECRET }}","subscriptionId":"${{ secrets.SUBSCRIPTION_ID }}","tenantId":"${{ secrets.TENANT_ID }}"}'
+    - name: Build with jekyll
+    - uses:  helaili/jekyll-action@v2
+      with:
+        credentials: ${{ secrets.AZURE_CREDENTIALS }}
