--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -16,3 +16,17 @@ jobs:
         docker run \
         -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
         jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
+      
+    - name: Login to Docker hub
+      uses: docker/login-action@v1
+      with:
+        name: pungpeeecicd/repository
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        
+#     - uses: docker/build-push-action@v2
+#       name: Build and Push
+#       run: |
+#           docker build -t nginx:alpine .
+#           docker run -d -p nginx:alpine  
+        
