--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -23,10 +23,13 @@ jobs:
         name: pungpeeecicd/repository
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        
-#     - uses: docker/build-push-action@v2
-#       name: Build and Push
-#       run: |
-#           docker build -t nginx:alpine .
-#           docker run -d -p nginx:alpine  
+
+  non-deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: docker/build-push-action@v2
+      name: Build and Push
+    - run: |
+          docker build -t nginx:alpine .
+          docker run -d -p nginx:alpine  
         
