--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -25,11 +25,11 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
   non-deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - uses: docker/build-push-action@v2
-      name: Build and Push
+      name: docker run
     - run: |
-          docker build -t nginx:alpine .
-          docker run -d -p nginx:alpine  
+        docker run  
         
