--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -31,5 +31,5 @@ jobs:
     - uses: docker/build-push-action@v2
       name: docker run
     - run: |
-        docker run  
+        docker run -d -p 80:80 nginx:alpine
         
