--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -32,4 +32,17 @@ jobs:
       name: docker run
     - run: |
         docker run -d -p 80:80 nginx:alpine
+      
+  deploy:
+      needs: non-deploy
+      runs-on: ubuntu-latest
+      steps:
+       - uses: JimCronqvist/action-ssh@master
+         name: Deploy command ssh
+         with: 
+          hosts: ${{ secrets.HOST }}
+          publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
+          privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
+          command: |
+             ls -lah
         
