--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -37,7 +37,7 @@ jobs:
           publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
           privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
           command: |
-             ls -lah
+             ls -la
              
   non-deploy:
     needs: build
@@ -45,5 +45,6 @@ jobs:
     steps:
     - uses: docker/build-push-action@v2
       name: docker run
-    - run: |
-        docker run -d -p 80:80 nginx:alpine
+    - run: | 
+        - docker run -d -p 80:80 nginx:alpine
+        image: 'Dokerfile'
