--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -34,8 +34,7 @@ jobs:
          name: Deploy command ssh
          with: 
           hosts: ${{ secrets.HOST }}
-          publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
-          privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
+          publicKey: ${{ secrets.SSH_PUBLIC_KEY }
           command: |
              ls -la
              
