--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -35,6 +35,7 @@ jobs:
          with: 
           hosts: ${{ secrets.HOST }}
           publicKey: ${{ secrets.SSH_PUBLIC_KEY }
+          privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
           command: |
              ls -la
              
