--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -35,7 +35,7 @@ jobs:
          with: 
           hosts: ${{ secrets.HOST }}
           publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
-          privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
+#           privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
           command: |
              ls -la
              
@@ -46,4 +46,4 @@ jobs:
     - uses: docker/build-push-action@v2
       name: docker run
     - run: | 
-        - docker run -d -p 80:80 nginx:alpine
+         docker run -d -p 80:80 nginx:alpine
