--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -26,8 +26,8 @@ jobs:
 
 
       
-  deploy:
-      needs: non-deploy
+  non-deploy:
+      needs: build
       runs-on: ubuntu-latest
       steps:
        - uses: JimCronqvist/action-ssh@master
@@ -35,15 +35,16 @@ jobs:
          with: 
           hosts: ${{ secrets.HOST }}
           publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
-#           privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
+          privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
           command: |
-             ls -la
+             cd test-cicd-firstTime
              
-  non-deploy:
-    needs: build
+  deploy:
+    needs: non-deploy
     runs-on: ubuntu-latest
     steps:
     - uses: docker/build-push-action@v2
       name: docker run
     - run: | 
+         docker build -t nginx:alpine .
          docker run -d -p 80:80 nginx:alpine
