--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -31,14 +31,16 @@ jobs:
       runs-on: ubuntu-latest
       steps:
        - uses: JimCronqvist/action-ssh@master
-         name: Deploy command ssh
+         name: executing remote ssh commands using ssh key
          with: 
           hosts: ${{ secrets.HOST }}
-          publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
-          privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
+          key: ${{ secrets.SSH_PUBLIC_KEY }}
+          username: ${{ secrets.USERNAME }}
+          port: ${{ secrets.PORT }}
+          script: whoami
           command: |
-             cd test-cicd-firstTime
-             
+             cd test-cicd-firstTime         
+        
   deploy:
     needs: non-deploy
     runs-on: ubuntu-latest
