--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -34,7 +34,7 @@ jobs:
          name: executing remote ssh commands using ssh key
          with: 
           hosts: ${{ secrets.HOST }}
-          key: ${{ secrets.SSH_PUBLIC_KEY }}
+          publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           script: whoami
