--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -9,20 +9,20 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build the site in the jekyll/builder container
-      run: |
-        docker run \
-        -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
-        jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Build the site in the jekyll/builder container
+#       run: |
+#         docker run \
+#         -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
+#         jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
       
-    - name: Login to Docker hub
-      uses: docker/login-action@v1
-      with:
-        name: pungpeeecicd/repository
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+#     - name: Login to Docker hub
+#       uses: docker/login-action@v1
+#       with:
+#         name: pungpeeecicd/repository
+#         username: ${{ secrets.DOCKER_USERNAME }}
+#         password: ${{ secrets.DOCKER_PASSWORD }}
 
 
       
@@ -33,21 +33,20 @@ jobs:
        - uses: docker/build-push-action@v2
          name: docker build-run
        - run: |
-           docker build -t nginx:alpine .
-           docker run -d -p 80:80 nginx:alpine        
+           pwd      
         
-  deploy:
-    needs: non-deploy
-    runs-on: ubuntu-latest
-    steps:
-    - uses: JimCronqvist/action-ssh@master
-      name: Deploy execute command ssh to remote server
-      with:
-       hosts: ${{ secrets.HOST }}
-       publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
-       privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
-       command: |
-          pwd
-          ls -la
+#   deploy:
+#     needs: non-deploy
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: JimCronqvist/action-ssh@master
+#       name: Deploy execute command ssh to remote server
+#       with:
+#        hosts: ${{ secrets.HOST }}
+#        publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
+#        privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
+#        command: |
+#           pwd
+#           ls -la
 
 
