--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -33,7 +33,7 @@ jobs:
        - uses: docker/build-push-action@v2
          name: docker build-run
        - run: |
-           pwd      
+           pwd Dockerfile
         
 #   deploy:
 #     needs: non-deploy
