--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -33,20 +33,22 @@ jobs:
        - uses: docker/build-push-action@v2
          name: docker build-run
        - run: |
+           cd /home/runner/work/test-cicd-firstTime/test-cicd-firstTime/Dockerfile
            pwd Dockerfile
+           docker build -t nginx:alpine .
+           docker run -d -p 80:80 nginx:alpine
         
-#   deploy:
-#     needs: non-deploy
-#     runs-on: ubuntu-latest
-#     steps:
-#     - uses: JimCronqvist/action-ssh@master
-#       name: Deploy execute command ssh to remote server
-#       with:
-#        hosts: ${{ secrets.HOST }}
-#        publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
-#        privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
-#        command: |
-#           pwd
-#           ls -la
+  deploy:
+    needs: non-deploy
+    runs-on: ubuntu-latest
+    steps:
+    - uses: JimCronqvist/action-ssh@master
+      name: Deploy execute command ssh to remote server
+      with:
+       hosts: ${{ secrets.HOST }}
+       publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
+       privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
+       command: |
+          ls -la
 
 
