--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -5,7 +5,7 @@ on:
     branches:  master 
 
 jobs:
-  build:
+  configlogin:
 
     runs-on: ubuntu-latest
 
@@ -26,8 +26,8 @@ jobs:
 
 
       
-  non-deploy:
-      needs: build
+  build:
+      needs: configlogin
       runs-on: ubuntu-latest
       steps:
        - uses: docker/build-push-action@v2
@@ -38,14 +38,14 @@ jobs:
               docker run -d -p 80:80 nginx:alpine
         
   deploy:
-    needs: non-deploy
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - uses: JimCronqvist/action-ssh@master
       name: Deploy execute command ssh to remote server
       with:
        hosts: ${{ secrets.HOST }}
-       publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
+#        publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
        privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
        command: |
           ls -la
