--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.TOKEN_GITHUB }}
           
       - name: Build and push
         uses: docker/build-push-action@v2
@@ -67,7 +67,7 @@ jobs:
         name: Deploy execute command ssh to remote server
         with:
          hosts: ${{ secrets.HOST }}
-  #        publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
+         publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
          privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
          command: |
             ls -la
