--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -63,11 +63,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - uses: JimCronqvist/action-ssh@master
-        name: Deploy execute command ssh to remote server
+      - uses: appleboy/ssh-action@master
+        name: Login and Deploy execute command ssh to remote server
         with:
          hosts: ${{ secrets.HOST }}
-         publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
+         username: ${{ secrets.USERNAME }}
          privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
          command: |
             ls -la
