--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -68,7 +68,7 @@ jobs:
         with:
          hosts: ${{ secrets.HOST }}
          username: ${{ secrets.USERNAME }}
-         key: ${{ secrets.SSH_PUBLIC_KEY }}
+         publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
          command: |
             ls -la
             docker rm -f test-cicd-firsttime:${{ env.ENV_NAME }}
