--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -68,6 +68,7 @@ jobs:
         with:
          hosts: ${{ secrets.HOST }}
          username: ${{ secrets.USERNAME }}
+         privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
          publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
          command: |
             ls -la
