--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -8,11 +8,11 @@ jobs:
   build:
       runs-on: ubuntu-latest
       steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+#       - name: Checkout code
+#         uses: actions/checkout@v2
       
-      - name: Set env
-        run: echo "ENV_NAME=$( [ "$GITHUB_REF" == "refs/heads/master" ] && echo 'uat' || echo ${GITHUB_REF##*/} )" >> $GITHUB_ENV
+#       - name: Set env
+#         run: echo "ENV_NAME=$( [ "$GITHUB_REF" == "refs/heads/master" ] && echo 'uat' || echo ${GITHUB_REF##*/} )" >> $GITHUB_ENV
       
       - uses: docker/build-push-action@v2
         name: docker build-run
@@ -25,7 +25,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.TOKEN_GITHUB }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Build and push
         uses: docker/build-push-action@v2
@@ -46,11 +46,7 @@ jobs:
          hosts: ${{ secrets.HOST }}
          username: ${{ secrets.USERNAME }}
          password: ${{ secrets.PASSWORD }}
-         publicKey: ${{ secrets.SSH_PUBLIC_KEY }}
          command: |
             ls -la
-            docker rm -f test-cicd-firsttime:${{ env.ENV_NAME }}
-            docker pull ghcr.io/pungpeee/test-cicd-firsttime:${{ env.ENV_NAME }}
-            docker run -d -p 80:80 test-cicd-firsttime:${{ env.ENV_NAME }}
 
 
