--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -18,7 +18,7 @@ jobs:
         name: docker build-run
         with: 
           command:
-            docker build -t nginx:alpine -f ./Dockerfile .
+            docker build -t myimage -f ./Dockerfile .
             
       - name: Login to Github Docker Registry
         uses: docker/login-action@v1
@@ -48,6 +48,6 @@ jobs:
          password: ${{ secrets.PASSWORD }}
          script: |
             ls -la
-            docker run -d -p 80:80 nginx:alpine
+            docker run -d -p 80:80 myimage
 
 
