--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -47,6 +47,7 @@ jobs:
          username: ${{ secrets.USERNAME }}
          password: ${{ secrets.PASSWORD }}
          script: |
+            cd test-cicd-firstTime
             docker rm -f test-cicd-firstTime:${{ env.ENV_NAME }}  
             docker pull ghcr.io/pungpeee/test-cicd-firstTime:${{ env.ENV_NAME }}  
             docker run -d -p 80:80 test-cicd-firstTime:${{ env.ENV_NAME }}  
