--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -17,7 +17,8 @@ jobs:
       - uses: docker/build-push-action@v2
         name: docker build-run
         with: 
-          command:
+          script:
+            cd test-cicd-firstTime
             docker build -t myimage -f ./Dockerfile .
             
       - name: Login to Github Docker Registry
@@ -46,9 +47,7 @@ jobs:
          host: ${{ secrets.HOST }}
          username: ${{ secrets.USERNAME }}
          password: ${{ secrets.PASSWORD }}
-         command: |
-            ls -la
-            cd test-cicd-firstTime
+         script: |
             docker pull ghcr.io/pungpeee/test-cicd-firstTime
             docker run -d -p 80:80 myimage 
   
