--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -19,7 +19,7 @@ jobs:
         with: 
           script:
             cd test-cicd-firstTime
-            docker build -t myimage -f ./Dockerfile .
+            docker build -t nginx:alpine -f ./Dockerfile .
             
       - name: Login to Github Docker Registry
         uses: docker/login-action@v1
@@ -48,6 +48,7 @@ jobs:
          username: ${{ secrets.USERNAME }}
          password: ${{ secrets.PASSWORD }}
          script: |
+            ls -la
             docker pull ghcr.io/pungpeee/test-cicd-firstTime
-            docker run -d -p 80:80 myimage 
+            docker run -d -p 80:80 test-cicd-firstTime
   
