--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -14,12 +14,12 @@ jobs:
       - name: Set env
         run: echo "ENV_NAME=$( [ "$GITHUB_REF" == "refs/heads/master" ] && echo 'uat' || echo ${GITHUB_REF##*/} )" >> $GITHUB_ENV
       
-      - uses: docker/build-push-action@v2
-        name: docker build-run
-        with: 
-          script:
-            cd test-cicd-firsttime
-            docker build -t nginx:alpine -f ./Dockerfile .
+#       - uses: docker/build-push-action@v2
+#         name: docker build-run
+#         with: 
+#           script:
+#             cd test-cicd-firsttime
+#             docker build -t nginx:alpine -f ./Dockerfile .
             
       - name: Login to Github Docker Registry
         uses: docker/login-action@v1
@@ -33,6 +33,8 @@ jobs:
         with:
           push: true
           tags: ghcr.io/pungpeee/test-cicd-firsttime:${{ env.ENV_NAME }}          
+          script: |
+            docker images
         
   deploy:
       needs: build
@@ -40,6 +42,9 @@ jobs:
       steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      
+      - name: Set env
+        run: echo "ENV_NAME=$( [ "$GITHUB_REF" == "refs/heads/master" ] && echo 'uat' || echo ${GITHUB_REF##*/} )" >> $GITHUB_ENV
 
       - uses: appleboy/ssh-action@master
         name: Login and Deploy execute command ssh to remote server
