--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -33,8 +33,9 @@ jobs:
         with:
           push: true
           tags: ghcr.io/pungpeee/test-cicd-firsttime:${{ env.ENV_NAME }}          
-          script: |
-            docker images
+          script: | 
+             cd test-cicd-firsttime/
+             docker images
         
   deploy:
       needs: build
@@ -54,7 +55,7 @@ jobs:
          password: ${{ secrets.PASSWORD }}
          script: |
             pwd
-            docker pull ghcr.io/pungpeee/test-cicd-firsttime:${{ env.ENV_NAME }}
+            docker pull ghcr.io/pungpeee/test-cicd-firsttime:uat
             docker images
-            docker run -d -p 80:80 nginx:alpine:${{ env.ENV_NAME }}
+            docker run -d -p 80:80 test-cicd-firsttime:uat
             docker ps -a
