--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -25,8 +25,8 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.TOKEN_GITHUB }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Build and push
         uses: docker/build-push-action@v2
@@ -55,7 +55,7 @@ jobs:
          password: ${{ secrets.PASSWORD }}
          script: |
             pwd
-            docker pull ghcr.io/pungpeee/test-cicd-firsttime:uat
+            docker pull ghcr.io/pungpeee/test-cicd-firsttime:${{ env.ENV_NAME }}
             docker images
-            docker run -d -p 80:80 test-cicd-firsttime:uat
+            docker run -d -p 80:80 test-cicd-firsttime:${{ env.ENV_NAME }}
             docker ps -a
