--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.TOKEN_GITHUB }}
           
       - name: Build and push
         uses: docker/build-push-action@v2
