--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -14,12 +14,12 @@ jobs:
       - name: Set env
         run: echo "ENV_NAME=$( [ "$GITHUB_REF" == "refs/heads/master" ] && echo 'uat' || echo ${GITHUB_REF##*/} )" >> $GITHUB_ENV
       
-#       - uses: docker/build-push-action@v2
-#         name: docker build-run
-#         with: 
-#           script:
-#             cd test-cicd-firsttime
-#             docker build -t nginx:alpine -f ./Dockerfile .
+      - uses: docker/build-push-action@v2
+        name: docker build-run
+        with: 
+          script:
+            cd test-cicd-firsttime
+            docker build -t nginx:alpine -f ./Dockerfile .
             
       - name: Login to Github Docker Registry
         uses: docker/login-action@v1
@@ -28,12 +28,12 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.TOKEN_GITHUB }}
           
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          file: ./Dockerfile
-          push: true
-          tags: ghcr.io/pungpeee/test-cicd-firsttime         
+#       - name: Build and push
+#         uses: docker/build-push-action@v2
+#         with:
+#           file: ./Dockerfile
+#           push: true
+#           tags: ghcr.io/pungpeee/test-cicd-firsttime         
               
 
   deploy:
@@ -50,8 +50,8 @@ jobs:
          username: ${{ secrets.USERNAME }}
          password: ${{ secrets.PASSWORD }}
          script: |
+            cd test-cicd-firsttime
             pwd
-            docker pull ghcr.io/pungpeee/test-cicd-firsttime
             docker images
-            docker run -p 80:80 test-cicd-firsttime
+            docker run -p 80:80 nginx:alpine
             docker ps -a
