--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -14,26 +14,31 @@ jobs:
       - name: Set env
         run: echo "ENV_NAME=$( [ "$GITHUB_REF" == "refs/heads/master" ] && echo 'uat' || echo ${GITHUB_REF##*/} )" >> $GITHUB_ENV
       
-      - uses: docker/build-push-action@v2
-        name: docker build-run
-        with: 
-          script:
-            cd test-cicd-firsttime
-            docker build -t nginx:alpine -f ./Dockerfile .
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+      
+#       - uses: docker/build-push-action@v2
+#         name: docker build-run
+#         with: 
+#           context: ./
+#           script:
+#             cd test-cicd-firsttime
+#             docker build -t nginx:alpine -f ./Dockerfile .
             
       - name: Login to Github Docker Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ secrets.USERNAME }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.TOKEN_GITHUB }}
           
-#       - name: Build and push
-#         uses: docker/build-push-action@v2
-#         with:
-#           file: ./Dockerfile
-#           push: true
-#           tags: ghcr.io/pungpeee/test-cicd-firsttime         
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          file: ./Dockerfile
+          push: true
+          tags: ghcr.io/pungpeee/test-cicd-firsttime:${{ env.ENV_NAME }}        
               
 
   deploy:
