--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.TOKEN_GITHUB }}
+          password: ${{ secrets.PASSWORD }}
           
       - name: Build and push
         uses: docker/build-push-action@v2
